tests/invalid/Parsing_Invalid_31.whiley
method m() :
    int b = 1

public export method test() :
    int a1 = m()
    int a2 = m()+1
    int[] a3 = [m()]
